# My-projects

./: .gitignore  Crescer - Fourier Series Regression - README.md  GIBots - Multilabel Classification - README.md  Nitheesh Pothireddy Multilabel Classification Assignment.ipynb  Nitheesh-P-Crescer-ML-IS.ipynb  README.md
.github/workflows/: readrover-ci.yml  toolsmith-ci.yml
fourier-series-regression/: README.md  fourier_regression.ipynb
multilabel-classification/: README.md  multilabel_classification.ipynb  requirements.txt
nyc-collisions-dashboard/: README.md  app.py  requirements.txt
readrover/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
readrover/demo/: streamlit_app.py
readrover/docs/: architecture.md
readrover/evals/: README.md  run_eval.py  topics.json
readrover/src/readrover/: __init__.py  cli.py  config.py  graph.py
readrover/src/readrover/agents/: __init__.py  critic.py  pdf_reader.py  search_planner.py  writer.py
readrover/src/readrover/retrieval/: __init__.py  vector_store.py
readrover/src/readrover/tools/: __init__.py  arxiv_client.py
readrover/tests/: __init__.py  conftest.py  test_agents.py  test_graph.py
toolsmith/: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
toolsmith/docs/: architecture.md  results.md
toolsmith/notebooks/: 02_train_colab.py
toolsmith/src/toolsmith/: __init__.py  cli.py  config.py  eval.py  inference.py  train.py
toolsmith/tests/: __init__.py  conftest.py  test_eval.py  test_format.py
