[project]
name = "readrover"
version = "0.1.0"
description = "Multi-agent research assistant that reads arXiv papers and synthesizes citation-backed briefs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Nitheesh Pothireddy" },
]
keywords = ["llm", "rag", "langgraph", "research", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Agent orchestration
    "langgraph>=0.2.50",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    # LLM clients
    "anthropic>=0.40.0",
    # Vector store + embeddings
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    # arXiv + PDF
    "arxiv>=2.1.0",
    "pypdf>=5.0.0",
    "httpx>=0.27.0",
    # Config + state
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # CLI
    "typer>=0.15.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
demo = [
    "streamlit>=1.40.0",
]
eval = [
    "pandas>=2.2.0",
    "tabulate>=0.9.0",
]
trace = [
    "langsmith>=0.1.140",
]

[project.scripts]
readrover = "readrover.cli:app"

[project.urls]
Homepage = "https://github.com/nitheesh-pothireddy/readrover"
Issues = "https://github.com/nitheesh-pothireddy/readrover/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/readrover"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=readrover --cov-report=term-missing"
asyncio_mode = "auto"
