[project]
name = "toolsmith"
version = "0.1.0"
description = "LoRA fine-tune of a 0.5B model for tool-calling on the Open-Meteo API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nitheesh Pothireddy" }]
keywords = ["llm", "lora", "peft", "fine-tuning", "tool-calling", "function-calling"]

# Runtime deps for *inference* — kept lean so reviewers can pip install + use the model.
dependencies = [
    "transformers>=4.46.0",
    "peft>=0.13.0",
    "torch>=2.4.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
train = [
    "accelerate>=1.0.0",
    "datasets>=3.0.0",
    "trl>=0.11.0",
    "bitsandbytes>=0.44.0; platform_system != 'Darwin'",
    "wandb>=0.18.0",
    "anthropic>=0.40.0",  # for synthetic data generation
]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]
hub = [
    "huggingface-hub>=0.25.0",
]

[project.scripts]
toolsmith = "toolsmith.cli:app"

[project.urls]
Homepage = "https://github.com/nitheesh-pothireddy/toolsmith"
"Model Hub" = "https://huggingface.co/nitheesh-pothireddy/toolsmith-qwen2.5-0.5b"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toolsmith"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
